# MicronJumpbox

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run.sh  setup.sh
docs/: ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT_PLAN.md  README.md  TMUX_INTEGRATION.md  todo.txt
jumpbox/: __init__.py  __main__.py  app.py  bulk.py  connect.py  data.py  dialogs.py  fuzzy.py  panes.py  storage.py  styles.tcss
tests/: smoke.py
tools/: screenshot.py
