[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jumpbox"
version = "0.1.0"
description = "Terminal SSH jump host built with Textual + Rich"
readme = "README.md"
# 3.10+ is a hard floor: the dialog code evaluates `X | Y` type unions at
# runtime (e.g. ModalScreen[str | None]), which 3.9 can't parse.
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Micron Technologies" }]
dependencies = [
    "textual>=8.0,<9",
    "rich>=14,<16",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

# This is what makes `jumpbox` a runnable command after install.
[project.scripts]
jumpbox = "jumpbox.__main__:main"

[tool.setuptools]
packages = ["jumpbox"]

[tool.setuptools.package-data]
jumpbox = ["styles.tcss"]
